fixes and suggestions by Frozen Burnside (thank you!!)

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,19 @@
 .vscode
-Include
-rom
-shc
-asm
-build
+Include/*
+rom/*
+shc/*
+asm/*
+build/*
 *.sub
 *.bin
 *.elf
 *.map
 *.nja
 tools/elf2bin
+
+!asm/.gitkeep
+!rom/.gitkeep
+!shc/bin/.gitkeep
+!shc/include/.gitkeep
+!shc/tmp/.gitkeep
+!build/.gitkeep
