--- a/chao.yaml
+++ b/chao.yaml
@@ -139,6 +139,8 @@ segments:
       - [0x67150, rodata, alo_seed]
       - [0x671EC, rodata, alef_ripple]
       - [0x671F8, rodata, al_camera] # rodata_2
+      - [0x673FC, rodata, al_toy/alo_ball]
+      - [0x674B0, rodata, al_toy/alo_box]
       - [0x674F0, rodata, al_toy/alo_horse]
       - [0x6752C, rodata, al_toy/alo_radicase]
       - [0x675D4, rodata, al_toy/alo_tv]
