albhv_move, albhv_walk: 100%

--- a/chao.yaml
+++ b/chao.yaml
@@ -140,7 +140,16 @@ segments:
       - [0x6713C, rodata, alo_osanpo]
       - [0x67150, rodata, alo_seed]
       - [0x671EC, rodata, alef_ripple]
-      - [0x671F8, rodata, al_camera] # rodata_2
+      - [0x671F8, rodata, al_behavior/albhv_art]
+      - [0x67250, rodata, al_behavior/albhv_capture]
+      - [0x6725C, rodata, al_behavior/albhv_life]
+      - [0x672D0, rodata, al_behavior/albhv_move]
+      - [0x672DC, rodata, al_behavior/albhv_nest]
+      - [0x672F0, rodata, al_behavior/albhv_sing]
+      - [0x672FC, rodata, al_behavior/albhv_toy]
+      - [0x67320, rodata, al_behavior/albhv_walk]
+      - [0x6732C, rodata, al_behavior/albhv_betafuncs]
+      - [0x67368, rodata, al_camera]
       - [0x673FC, rodata, al_toy/alo_ball]
       - [0x674B0, rodata, al_toy/alo_box]
       - [0x674F0, rodata, al_toy/alo_horse]
